collapse fix attempt

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1532,6 +1532,7 @@ a:active {
 }
 .native-collapse-wrap details summary.chevron {
   display: flex;
+  display: -webkit-flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
