--- a/resources/less/components/collapse.less
+++ b/resources/less/components/collapse.less
@@ -56,7 +56,9 @@
 
             &.chevron {
                 display: flex;
+                display:-webkit-flex;
                 flex-direction: row;
+                -webkit-flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
             }
